--- a/blockchain.html
+++ b/blockchain.html
@@ -38,7 +38,8 @@
     <!--Header-->
     <header>
         <nav class="navbar navbar-default navbar-fixed white no-background bootsnav">
-            <div class="container">
+            <!-- <div class="container"> -->
+        <div class="header">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">
                         <img src="images/IBM_ICE.jpg" alt="Logo" style="width: 200px !important;"
@@ -70,8 +71,8 @@
             </div>
         </nav>
 
-        <div class="navbar-fixed-top main-menu-continer" style="top: 200px !important;">
-            <button type="button" class="btn menubar-toggle styl" onclick="openNav()">
+        <div class="navbar-fixed-top main-menu-continer menutop">
+            <button type="button" class="btn menubar-toggle styl" onmouseover="openNav()">
                 <!-- <i class="fa fa-bars"></i> -->Menu
             </button>
 
@@ -209,23 +210,21 @@
 
     <section class="padding bottom25" style="padding-bottom: 0px;">
         <div class="container">
-            <center>
                 <h2 class="heading bottom25">Market Trends And Predictions<span class="divider-left"></span></h2>
-            </center>
             <div class="row">
-                <div class="col-md-7">
-                    <img class="img-responsive" src="images/blockchain/market-graph.jpg" alt="graph">
-                </div>
                 <div class="col-md-5">
                     <p class="half_space text-justify">The global blockchain technology market size is expected to reach
                         USD 7.59 billion by 2024, according to a new report by Grand View Research.
                     </p>
                     <h4 class="siz">Salary Trends</h4>
-                    <ul style="list-style: inherit;color: #5b5b5b;">
+                    <ul class="ulpad">
                             <li>Globally average salary is $80k per annum</li>
                         <li>Average salary in India is ₹80lpa across all skill sets
                         </li>
                     </ul>
+                </div>
+                <div class="col-md-7">
+                    <img class="img-responsive" src="images/blockchain/market-graph.jpg" alt="graph">
                 </div>
             </div>
         </div>
@@ -235,13 +234,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <div class="col-sm-4">
+                    <img class="img-responsive" alt="skill" src="images/AIML/skills.jpg">
+                    <!-- <div class="col-sm-4">
                         <img class="img-responsive" src="images/AIML/jobs.jpg">
                     </div>
                     <div class="col-sm-6">
                         <div class="item">
                             <h4 class="siz">Job Roles</h4>
-                            <ul style="list-style: inherit;color: #5b5b5b;">
+                            <ul class="ulpad">
                                 <li>Backend developer</li>
                                 <li>Blockchain system architect</li>
                                 <li>Blockchain software engineer</li>
@@ -249,34 +249,51 @@
                                 <li>Blockchain quality engineer</li>
                             </ul>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="col-md-6">
-                    <div class="col-sm-4">
+                        <div class="item">
+                                <h4 class="siz">Job Roles</h4>
+                                <ul class="ulpad">
+                                    <li>Backend developer</li>
+                                    <li>Blockchain system architect</li>
+                                    <li>Blockchain software engineer</li>
+                                    <li>Blockchain web designer</li>
+                                    <li>Blockchain quality engineer</li>
+                                </ul>
+                            </div>
+                            <div class="item">
+                                    <h4 class="siz">Skills Required</h4>
+                                    <ul class="ulpad">
+                                        <li>Cryptography</li>
+                                        <li>Programming</li>
+                                        <li>Distributed ledger – concepts</li>
+                                    </ul>
+                                </div>
+                    <!-- <div class="col-sm-4">
                         <img class="img-responsive" src="images/AIML/skills.jpg">
                     </div>
                     <div class="col-sm-6">
                         <div class="item">
                             <h4 class="siz">Skills Required</h4>
-                            <ul style="list-style: inherit;color: #5b5b5b;">
+                            <ul class="ulpad">
                                 <li>Cryptography</li>
                                 <li>Programming</li>
                                 <li>Distributed ledger – concepts</li>
                             </ul>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
     </section><br>
 
     <section id="companies">
-        <div class="container">
-            <center>
-                <h2 class="heading">Companies Hiring<span class="divider-left"></span></h2>
-            </center>
+        <div class="container">  <h2 class="heading">Companies Hiring<span class="divider-left"></span></h2>
             <div class="row">
+                <div class="col-md-12">
                 <center><img class="img-responsive" src="images/blockchain/companies.PNG" alt="company"></center>
+            </div>
             </div>
         </div>
     </section><br>
@@ -286,10 +303,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <center>
-                        <h2 class="heading heading_space bottom25">Subjects<span class="divider-left"></span>
+                  <h2 class="heading heading_space bottom25">Subjects<span class="divider-left"></span>
                         </h2>
-                    </center>
                 </div>
             </div>
             <div class="row">
