--- a/datascience.html
+++ b/datascience.html
@@ -38,7 +38,8 @@
     <!--Header-->
     <header>
         <nav class="navbar navbar-default navbar-fixed white no-background bootsnav">
-            <div class="container">
+             <!-- <div class="container"> -->
+        <div class="header">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">
                         <img src="images/IBM_ICE.jpg" alt="Logo" style="width: 200px !important;"
@@ -70,8 +71,8 @@
             </div>
         </nav>
 
-        <div class="navbar-fixed-top main-menu-continer" style="top: 200px !important;">
-            <button type="button" class="btn menubar-toggle styl" onclick="openNav()">
+        <div class="navbar-fixed-top main-menu-continer menutop">
+            <button type="button" class="btn menubar-toggle styl" onmouseover="openNav()">
                 <!-- <i class="fa fa-bars"></i> -->Menu
             </button>
 
@@ -212,19 +213,19 @@
         <div class="container">
               <h2 class="heading bottom25">Market Trends And Predictions<span class="divider-left"></span></h2>
             <div class="row">
-                <div class="col-md-7">
-                    <img class="img-responsive" src="images/datascience/market-graph.jpg" alt="graph">
-                </div>
                 <div class="col-md-5">
                     <p class="half_space text-justify">The global market is projected to grow from $17.1B
                         in 2017 to $99.31B in 2022 attaining a 28.5% CAGR. The greatest period of projected growth is in
                         2021 and 2022 when the market is projected to jump $30B in value in one year.
                     </p>
                     <h4 class="siz">Salary Trends</h4>
-                    <ul style="list-style: inherit;color: #5b5b5b;">
+                    <ul class="ulpad">
                             <li>Globally average salary will be $117k per annum</li>
                         <li>Average salary in India is INR 68lpa across all skill sets</li>
                     </ul>
+                </div>
+                <div class="col-md-7">
+                    <img class="img-responsive" src="images/datascience/market-graph.jpg" alt="graph">
                 </div>
             </div>
         </div>
@@ -234,34 +235,51 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <div class="col-sm-4">
+                    <img class="img-responsive" alt="skill" src="images/AIML/skills.jpg">
+                    <!-- <div class="col-sm-4">
                         <img class="img-responsive" src="images/AIML/jobs.jpg">
                     </div>
                     <div class="col-sm-6">
                         <div class="item">
                             <h4 class="siz">Job Roles</h4>
-                            <ul style="list-style: inherit;color: #5b5b5b;">
+                            <ul class="ulpad">
                                 <li>Data analyst </li>
                                 <li>Data scientist</li>
                                 <li>Product analyst</li>
                             </ul>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="col-md-6">
-                    <div class="col-sm-4">
+                        <div class="item">
+                                <h4 class="siz">Job Roles</h4>
+                                <ul class="ulpad">
+                                    <li>Data analyst </li>
+                                    <li>Data scientist</li>
+                                    <li>Product analyst</li>
+                                </ul>
+                            </div><br>
+                            <div class="item">
+                                    <h4 class="siz">Skills Required</h4>
+                                    <ul class="ulpad">
+                                        <li>Programming</li>
+                                        <li>Analytics</li>
+                                        <li>Data visualization </li>
+                                    </ul>
+                                </div>
+                    <!-- <div class="col-sm-4">
                         <img class="img-responsive" src="images/AIML/skills.jpg">
                     </div>
                     <div class="col-sm-6">
                         <div class="item">
                             <h4 class="siz">Skills Required</h4>
-                            <ul style="list-style: inherit;color: #5b5b5b;">
+                            <ul class="ulpad">
                                 <li>Programming</li>
                                 <li>Analytics</li>
                                 <li>Data visualization </li>
                             </ul>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
