--- a/iot.html
+++ b/iot.html
@@ -38,7 +38,8 @@
     <!--Header-->
     <header>
         <nav class="navbar navbar-default navbar-fixed white no-background bootsnav">
-            <div class="container">
+             <!-- <div class="container"> -->
+        <div class="header">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">
                         <img src="images/IBM_ICE.jpg" alt="Logo" style="width: 200px !important;"
@@ -70,8 +71,8 @@
             </div>
         </nav>
 
-        <div class="navbar-fixed-top main-menu-continer" style="top: 200px !important;">
-            <button type="button" class="btn menubar-toggle styl" onclick="openNav()">
+        <div class="navbar-fixed-top main-menu-continer menutop">
+            <button type="button" class="btn menubar-toggle styl" onmouseover="openNav()">
                 <!-- <i class="fa fa-bars"></i> -->Menu
             </button>
 
@@ -211,23 +212,21 @@
     </section>
 
     <section class="padding bottom25" style="padding-bottom: 0px;">
-        <div class="container">
-            <center>
-                <h2 class="heading bottom25">Market Trends And Predictions<span class="divider-left"></span></h2>
-            </center>
+        <div class="container"> 
+             <h2 class="heading bottom25">Market Trends And Predictions<span class="divider-left"></span></h2>
             <div class="row">
-                <div class="col-md-7">
-                    <img class="img-responsive" src="images/IOT/market.png" alt="graph">
-                </div>
                 <div class="col-md-5">
                     <p class="half_space text-justify">Worldwide technology spending on the Internet of Things to reach
                         $1.2T in 2022, attaining a CAGR of 13.6% over the 2017-2022 forecast period according to IDC.
                     </p>
                     <h4 class="siz">Salary Trends</h4>
-                    <ul style="list-style: inherit;color: #5b5b5b;">
+                    <ul class="ulpad">
                             <li>Globally average salary is $92,283 per annum</li>
                         <li>Median salary in India is ₹15.2lpa across all skill sets</li>
                     </ul>
+                </div>
+                <div class="col-md-7">
+                    <img class="img-responsive" src="images/IOT/market.png" alt="graph">
                 </div>
             </div>
         </div>
@@ -237,36 +236,55 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <div class="col-sm-4">
+                    <img class="img-responsive" alt="skill" src="images/AIML/skills.jpg">
+                    <!-- <div class="col-sm-4">
                         <img class="img-responsive" src="images/AIML/jobs.jpg">
                     </div>
                     <div class="col-sm-6">
                         <div class="item">
                             <h4 class="siz">Job Roles</h4>
-                            <ul style="list-style: inherit;color: #5b5b5b;">
+                            <ul class="ulpad">
                                 <li>Network engineer </li>
                                 <li>Backend developer</li>
                                 <li>Technical consultant</li>
                                 <li>Machine learning engineer</li>
                             </ul>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="col-md-6">
-                    <div class="col-sm-4">
+                        <div class="item">
+                                <h4 class="siz">Job Roles</h4>
+                                <ul class="ulpad">
+                                    <li>Network engineer </li>
+                                    <li>Backend developer</li>
+                                    <li>Technical consultant</li>
+                                    <li>Machine learning engineer</li>
+                                </ul>
+                            </div>
+                            <div class="item">
+                                    <h4 class="siz">Skills Required</h4>
+                                    <ul class="ulpad">
+                                        <li>Programming</li>
+                                        <li>Networking</li>
+                                        <li>Analytics</li>
+                                        <li>Network security</li>
+                                    </ul>
+                                </div>
+                    <!-- <div class="col-sm-4">
                         <img class="img-responsive" src="images/AIML/skills.jpg">
                     </div>
                     <div class="col-sm-6">
                         <div class="item">
                             <h4 class="siz">Skills Required</h4>
-                            <ul style="list-style: inherit;color: #5b5b5b;">
+                            <ul class="ulpad">
                                 <li>Programming</li>
                                 <li>Networking</li>
                                 <li>Analytics</li>
                                 <li>Network security</li>
                             </ul>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
