--- a/artificial.html
+++ b/artificial.html
@@ -38,7 +38,8 @@
     <!--Header-->
     <header>
         <nav class="navbar navbar-default navbar-fixed white no-background bootsnav">
-            <div class="container">
+            <!-- <div class="container"> -->
+                <div class="header">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">
                         <img src="images/IBM_ICE.jpg" alt="Logo" style="width: 200px !important;"
@@ -212,19 +213,19 @@
         <div class="container">
                 <h2 class="heading bottom25">Market Trends And Predictions<span class="divider-left"></span></h2>
             <div class="row">
-                <div class="col-md-7">
-                    <img class="img-responsive" src="images/AIML/market-graph.png" alt="graph">
-                </div>
                 <div class="col-md-5">
                     <p class="half_space text-justify">The global market is forecasted to grow to 103 billion
                         U.S. dollars by 2027, more than double its expected market size in 2018. With a share of 45
                         percent, the software segment would become the large market segment by 2027.
                     </p>
                     <h4 class="siz">Salary Trends</h4>
-                    <ul style="list-style: inherit;color: #5b5b5b;">
+                    <ul class="ulpad">
                         <li>Globally average salary will be $130k per annum</li>
                         <li>The median salary in India is INR 14.3 Lakhs across all skill sets</li>
                     </ul>
+                </div>
+                <div class="col-md-7">
+                    <img class="img-responsive" src="images/AIML/market-graph.png" alt="graph">
                 </div>
             </div>
         </div>
@@ -234,34 +235,51 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <div class="col-sm-4">
+                        <img class="img-responsive" src="images/AIML/skills.jpg" alt="skils">
+                    <!-- <div class="col-sm-4">
                         <img class="img-responsive" src="images/AIML/jobs.jpg">
                     </div>
                     <div class="col-sm-6">
                         <div class="item">
                             <h4 class="siz">Job Roles</h4>
-                            <ul style="list-style: inherit;color: #5b5b5b;">
+                            <ul class="ulpad">
                                 <li>Machine learning engineer</li>
                                 <li>Data scientist</li>
                                 <li>Business intelligence developer </li>
                             </ul>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="col-md-6">
-                    <div class="col-sm-4">
+                        <div class="item">
+                                <h4 class="siz">Job Roles</h4>
+                                <ul class="ulpad">
+                                    <li>Machine learning engineer</li>
+                                    <li>Data scientist</li>
+                                    <li>Business intelligence developer </li>
+                                </ul>
+                            </div><br>
+                            <div class="item">
+                                    <h4 class="siz">Skills Required</h4>
+                                    <ul class="ulpad">
+                                        <li>Programming</li>
+                                        <li>Communication skills</li>
+                                        <li>Leadership skills</li>
+                                    </ul>
+                                </div>
+                    <!-- <div class="col-sm-4">
                         <img class="img-responsive" src="images/AIML/skills.jpg">
                     </div>
                     <div class="col-sm-6">
                         <div class="item">
                             <h4 class="siz">Skills Required</h4>
-                            <ul style="list-style: inherit;color: #5b5b5b;">
+                            <ul class="ulpad">
                                 <li>Programming</li>
                                 <li>Communication skills</li>
                                 <li>Leadership skills</li>
                             </ul>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
