--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,8 @@
     <!--Header-->
     <header>
         <nav class="navbar navbar-default navbar-fixed white no-background bootsnav">
-            <div class="container">
+            <!-- <div class="container"> -->
+        <div class="header">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">
                         <img src="images/IBM_ICE.jpg" alt="Logo" style="width: 200px !important;"
@@ -70,8 +71,8 @@
             </div>
         </nav>
 
-        <div class="navbar-fixed-top main-menu-continer" style="top: 200px !important;">
-            <button type="button" class="btn menubar-toggle styl" onclick="openNav()">
+        <div class="navbar-fixed-top main-menu-continer menutop">
+            <button type="button" class="btn menubar-toggle styl" onmouseover="openNav()">
                 <!-- <i class="fa fa-bars"></i> -->Menu
             </button>
 
