--- a/cybersecu.html
+++ b/cybersecu.html
@@ -38,7 +38,8 @@
     <!--Header-->
     <header>
         <nav class="navbar navbar-default navbar-fixed white no-background bootsnav">
-            <div class="container">
+             <!-- <div class="container"> -->
+        <div class="header">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">
                         <img src="images/IBM_ICE.jpg" alt="Logo" style="width: 200px !important;"
@@ -70,8 +71,8 @@
             </div>
         </nav>
 
-        <div class="navbar-fixed-top main-menu-continer" style="top: 200px !important;">
-            <button type="button" class="btn menubar-toggle styl" onclick="openNav()">
+        <div class="navbar-fixed-top main-menu-continer menutop">
+            <button type="button" class="btn menubar-toggle styl" onmouseover="openNav()">
                 <!-- <i class="fa fa-bars"></i> -->Menu
             </button>
 
@@ -213,17 +214,17 @@
         <div class="container">
                <h2 class="heading bottom25">Market Trends And Predictions<span class="divider-left"></span></h2>
            <div class="row">
-                <div class="col-md-7">
-                    <img class="img-responsive" src="images/CS/market-graph.jpg" alt="graph">
-                </div>
                 <div class="col-md-5">
                     <p class="half_space text-justify">Cyber Security Market is Estimated to Grow at a CAGR of 13.5% over the forecast years (2019 - 2027), with Cyber-attacks Gaining Traction as Fastest Growing Type of Crime Across the Globe, Says Absolute Markets Insights.
                     </p>
                     <h4 class="siz">Salary Trends</h4>
-                    <ul style="list-style: inherit;color: #5b5b5b;">                        
+                    <ul class="ulpad">                        
                             <li>Globally avarage salary is $144k per annum</li>
                         <li>Average salary in India is ₹80lpa across all skill sets</li>
                     </ul>
+                </div>
+                <div class="col-md-7">
+                    <img class="img-responsive" src="images/CS/market-graph.jpg" alt="graph">
                 </div>
             </div>
         </div>
@@ -233,13 +234,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <div class="col-sm-4">
+                    <img class="img-responsive" alt="skill" src="images/AIML/skills.jpg">
+                    <!-- <div class="col-sm-4">
                         <img class="img-responsive" src="images/AIML/jobs.jpg">
                     </div>
                     <div class="col-sm-6">
                         <div class="item">
                             <h4 class="siz">Job Roles</h4>
-                            <ul style="list-style: inherit;color: #5b5b5b;">
+                            <ul class="ulpad">
                                 <li>Information security analyst </li>
                                 <li>Security software developer</li>
                                 <li>Network security architect</li>
@@ -247,16 +249,36 @@
                                 <li>Computer and information systems manager</li>
                             </ul>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="col-md-6">
-                    <div class="col-sm-4">
-                        <img class="img-responsive" src="images/AIML/skills.jpg>
+                        <div class="item">
+                                <h4 class="siz">Job Roles</h4>
+                                <ul class="ulpad">
+                                    <li>Information security analyst </li>
+                                    <li>Security software developer</li>
+                                    <li>Network security architect</li>
+                                    <li>Network and computer systems administrator</li>
+                                    <li>Computer and information systems manager</li>
+                                </ul>
+                            </div><br>
+                            <div class="item">
+                                    <h4 class="siz">Skills Required</h4>
+                                    <ul class="ulpad">
+                                        <li>Programming</li>
+                                        <li>Risk analysis and mitigation</li>
+                                        <li>Cloud security </li>
+                                        <li>Security analysis </li>
+                                        <li>Networking </li>
+                                    </ul>
+                                </div>
+                    <!-- <div class="col-sm-4">
+                        <img class="img-responsive" src="images/AIML/skills.jpg">
                     </div>
                     <div class="col-sm-6">
                         <div class="item">
                             <h4 class="siz">Skills Required</h4>
-                            <ul style="list-style: inherit;color: #5b5b5b;">
+                            <ul class="ulpad">
                                 <li>Programming</li>
                                 <li>Risk analysis and mitigation</li>
                                 <li>Cloud security </li>
@@ -264,7 +286,7 @@
                                 <li>Networking </li>
                             </ul>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
