--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
   <!--Header-->
   <header>
     <nav class="navbar navbar-default navbar-fixed white no-background bootsnav">
-      <div class="container">
+      <!-- <div class="container"> -->
+        <div class="header">
         <div class="navbar-header">
           <!-- <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
             <i class="fa fa-bars"></i>
@@ -49,7 +50,7 @@
           </a>
         </div>
         <div class="collapse navbar-collapse" id="navbar-menu">
-          <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOut">
+          <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" >
             <li><a href="index.html">Home</a></li>
             <li><a href="certificate.html">IBM Global Certificate</a></li>
             <li class="dropdown">
@@ -71,8 +72,8 @@
       </div>
     </nav>
 
-    <div class="navbar-fixed-top main-menu-continer" style="top: 200px !important;">
-      <button type="button" class="btn menubar-toggle styl" onclick="openNav()">
+    <div class="navbar-fixed-top main-menu-continer menutop">
+      <button type="button" class="btn menubar-toggle styl" onmouseover="openNav()">
         <!-- <i class="fa fa-bars"></i> -->Menu
       </button>
 
@@ -106,7 +107,7 @@
           </li>
           <hr>
           <li>
-            <a href="#"><img src="images/sidebar/reg.ico"
+            <a href=""><img src="images/sidebar/reg.ico"
                 style="height:30px!important;padding-right: inherit;" />Registration</a>
           </li>
           <hr>
@@ -189,7 +190,7 @@
 
 
   <!--ABout US-->
-  <section id="ibm" class="bottom25">
+  <section id="ibm">
     <div class="container margin10">
       <div class="row">
         <div class="col-md-6">
