--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <header>
     <nav class="navbar navbar-default navbar-fixed white no-background bootsnav">
       <!-- <div class="container"> -->
-        <div class="header">
+      <div class="header">
         <div class="navbar-header">
           <!-- <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
             <i class="fa fa-bars"></i>
@@ -50,7 +50,7 @@
           </a>
         </div>
         <div class="collapse navbar-collapse" id="navbar-menu">
-          <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" >
+          <ul class="nav navbar-nav navbar-right" data-in="fadeInDown">
             <li><a href="index.html">Home</a></li>
             <li><a href="certificate.html">IBM Global Certificate</a></li>
             <li class="dropdown">
@@ -98,8 +98,10 @@
                   Intelligence</a></li>
               <li><a href="blockchain.html"><i class="fa fa-search" style="padding-right: 12px;"></i>Blockchain</a></li>
               <li><a href="BA.html"><i class="fa fa-search" style="padding-right: 12px;"></i>Business Analytics</a></li>
-              <li><a href="cybersecu.html"><i class="fa fa-search" style="padding-right: 12px;"></i>Cyber Security</a></li>
-              <li><a href="datascience.html"><i class="fa fa-search" style="padding-right: 12px;"></i>Data Science</a></li>
+              <li><a href="cybersecu.html"><i class="fa fa-search" style="padding-right: 12px;"></i>Cyber Security</a>
+              </li>
+              <li><a href="datascience.html"><i class="fa fa-search" style="padding-right: 12px;"></i>Data Science</a>
+              </li>
               <li><a href="iot.html"><i class="fa fa-search" style="padding-right: 12px;"></i>Internet of Things</a>
               </li>
             </ul>
@@ -117,7 +119,7 @@
           <hr>
         </ul>
       </div>
-    </div> 
+    </div>
   </header>
 
   <!--Slider-->
@@ -210,18 +212,18 @@
             in Armonk, NY. Started in 1911. A century of innovation - One of only 2 companies to remain in
             the top 25 Industrial companies since 1900. In 2017, IBM’s Revenue was USD 79.1 billion revenue (Cloud- USD
             17 Billion). We live at the intersection of business and technology and
-            today, we are a cognitive solutions and cloud platform company, transforming entire industries</p>
-          
+            today, we are a cognitive solutions and cloud platform company, transforming entire industries.</p>
+
         </div>
         <div class="col-md-6">
           <div class="wrap">
-              <iframe width="100%" height="250" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
-              <!-- <iframe width="100%" height="315" src="video/Block_chain.mp4"></iframe> -->
-              <!-- <h1>Blockchain</h1> -->
-              <!-- <iframe src="https://player.vimeo.com/video/55806355" width="100%" height="360" frameborder="0"
+            <iframe width="100%" height="250" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+            <!-- <iframe width="100%" height="315" src="video/Block_chain.mp4"></iframe> -->
+            <!-- <h1>Blockchain</h1> -->
+            <!-- <iframe src="https://player.vimeo.com/video/55806355" width="100%" height="360" frameborder="0"
   webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
           </div>
-      </div>
+        </div>
       </div>
     </div>
   </section>
@@ -235,15 +237,12 @@
             collaborates with universities to co-create degrees that let industry professionals and students interact
             and prepare for solving the problems of tomorrow. IBM works with its partner ecosystem as well as thousands
             of clients worldwide to understand the skills needed by working professionals in their organizations. The
-            IBM Innovation Centre for Education initiative aims to leverage the proven academic excellence of the
+            IBM ICE initiative aims to leverage the proven academic excellence of the
             existing university degree (i.e., developed scientific course content, attained academic accreditations,
             student attraction, faculty retention and local community support) and augment the degree with specific
-            industry and/or technology specializations, bridging the gap between academia and industry and giving to
-            students access to relevant concepts of a rapidly changing reality earlier in their professional formation.
-            In these degree programs, the focus is on project-based learning and industry interaction. Students’ work is
-            constantly under review and receives input from industry specialists that supports learning. Better faculty
-            training and a support from industry subject matter experts also means that faculty skills also remain
-            up-to-date. Students graduate able to meet real IT challenges and are well-prepared to enter the workforce.
+            industry and/or technology specializations by bridging the gap between academia and industry.
+            Together, this will impart outstanding industry-grade skills to our young students and will help them
+            prepare for any challenges that the Smarter Planet will bring to them in their exciting careers ahead.
           </p>
         </div>
       </div>
@@ -255,17 +254,16 @@
     <div class="container margin10">
       <div class="row">
         <div class="col-md-12 priorty">
-         <h2 class="heading bottom25">About Additional Skill Aquisition Program<span class="divider-left"></span></h2>
-          <p class="text-justify margin10 half_space">To address the concern of the growing
-            educated-unemployment rates of the State, the SSDP or State Skill Development Project was enacted, in the
-            year 2012. This was following the realization that Kerala has the human resource and the potential to soar
-            up to become a radial point for skilled manpower to the world by virtue of its demographic dividend. SSDP
-            involves the participation of industries and training partners to execute the project ASAP (Additional Skill
-            Acquisition Programme). ASAP, under the General and Higher Education Departments, works on the preventive
-            side by training Higher Graduate students, offering skill courses to students in need of immediate
-            employment. ASAP offers varied skill sets to the undergraduate students through its foundation module and
-            skill training program. ASAP has partnered with several agencies in the Centre as well as State to implement
-            special skilling programmes for the needy student populace of the state.
+          <h2 class="heading bottom25">About Additional Skill Aquisition Program<span class="divider-left"></span></h2>
+          <p class="text-justify margin10 half_space">In the year 2012, the State Skill Development Project (SSDP) was
+            enacted to address the concern of the growing educated-unemployment rates of the State. SSDP involves the
+            participation of
+            industries and training partners to execute the project ASAP (Additional Skill Acquisition Programme). ASAP,
+            under the General and Higher Education Departments, works on the preventive side by training Higher Graduate
+            students, offering skill courses to students in need of immediate employment. ASAP offers varied skill sets
+            to the undergraduate students through its foundation module and skill training program. ASAP has also
+            identified need to tie up with a well recognized organization, whose skill development methodologies, tools
+            and capabilities are proven. Whose certification is globally recognized.
           </p>
           <p class="text-justify">Since its inception, ASAP has been relentlessly ‘empowering’ the youth of Kerala
             through globally-relevant ‘employable skills’ in several sectors. ASAP also proved its capabilities in
@@ -273,7 +271,10 @@
             strengthen its services to people and the industry, the idea of setting up Community Skill Parks has been
             mooted under ASAP subsequently. Community Skill Parks are large state-of-the-art multi skill training
             facilities that are being built across the state for providing higher order skill training to citizens with
-            a vision to better their livelihood along with making the state economy stronger.</p>
+            a vision to better their livelihood along with making the state economy stronger. As a result, ASAP has
+            planned
+            to launch Community Skills Park(CSP) in collaboration with IBM India Pvt. Ltd. under the Kerala Government’s
+            Skill Development Initiative.</p>
         </div>
       </div>
     </div>
@@ -284,18 +285,17 @@
     <div class="container margin10">
       <div class="row">
         <div class="col-md-12 priorty">
-         <h2 class="heading bottom25">IBM joins hands with ASAP – CSP Kalamassery<span
-              class="divider-left"></span></h2>
-          <p class="text-justify margin10 half_space">To address the concern of the growing educated-unemployment rates
-            of the State, the SSDP or State Skill Development Project was enacted, in the year 2012. This was following
-            the realization that Kerala has the human resource and the potential to soar up to become a radial point for
-            skilled manpower to the world by virtue of its demographic dividend. SSDP involves the participation of
+          <h2 class="heading bottom25">IBM and ASAP Collaboration – CSP Kalamassery<span class="divider-left"></span>
+          </h2>
+          <p class="text-justify margin10 half_space">In the year 2012, the State Skill Development Project (SSDP) was
+            enacted to address the concern of the growing educated-unemployment rates of the State. SSDP involves the
+            participation of
             industries and training partners to execute the project ASAP (Additional Skill Acquisition Programme). ASAP,
             under the General and Higher Education Departments, works on the preventive side by training Higher Graduate
             students, offering skill courses to students in need of immediate employment. ASAP offers varied skill sets
-            to the undergraduate students through its foundation module and skill training program. ASAP has partnered
-            with several agencies in the Centre as well as State to implement special skilling programmes for the needy
-            student populace of the state.
+            to the undergraduate students through its foundation module and skill training program. ASAP has also
+            identified need to tie up with a well recognized organization, whose skill development methodologies, tools
+            and capabilities are proven. Whose certification is globally recognized.
           </p>
           <p class="text-justify">Since its inception, ASAP has been relentlessly ‘empowering’ the youth of Kerala
             through globally-relevant ‘employable skills’ in several sectors. ASAP also proved its capabilities in
@@ -303,7 +303,10 @@
             strengthen its services to people and the industry, the idea of setting up Community Skill Parks has been
             mooted under ASAP subsequently. Community Skill Parks are large state-of-the-art multi skill training
             facilities that are being built across the state for providing higher order skill training to citizens with
-            a vision to better their livelihood along with making the state economy stronger.</p>
+            a vision to better their livelihood along with making the state economy stronger. As a result, ASAP has
+            planned
+            to launch Community Skills Park(CSP) in collaboration with IBM India Pvt. Ltd. under the Kerala Government’s
+            Skill Development Initiative.</p>
         </div>
       </div>
     </div>
@@ -777,38 +780,38 @@
       });
     }
 
-     // video
+    // video
 
-        /*Floating Code for Iframe Start*/
-        if (jQuery('iframe[src*="https://www.youtube.com/embed/"],iframe[src*="https://player.vimeo.com/"],iframe[src*="https://player.vimeo.com/"]').length > 0) {
-            /*Wrap (all code inside div) all vedio code inside div*/
-            jQuery('iframe[src*="https://www.youtube.com/embed/"],iframe[src*="https://player.vimeo.com/"]').wrap("<div class='iframe-parent-class'></div>");
-            /*main code of each (particular) vedio*/
-            jQuery('iframe[src*="https://www.youtube.com/embed/"],iframe[src*="https://player.vimeo.com/"]').each(function (index) {
+    /*Floating Code for Iframe Start*/
+    if (jQuery('iframe[src*="https://www.youtube.com/embed/"],iframe[src*="https://player.vimeo.com/"],iframe[src*="https://player.vimeo.com/"]').length > 0) {
+      /*Wrap (all code inside div) all vedio code inside div*/
+      jQuery('iframe[src*="https://www.youtube.com/embed/"],iframe[src*="https://player.vimeo.com/"]').wrap("<div class='iframe-parent-class'></div>");
+      /*main code of each (particular) vedio*/
+      jQuery('iframe[src*="https://www.youtube.com/embed/"],iframe[src*="https://player.vimeo.com/"]').each(function (index) {
 
-                /*Floating js Start*/
-                var windows = jQuery(window);
-                var iframeWrap = jQuery(this).parent();
-                var iframe = jQuery(this);
-                var iframeHeight = iframe.outerHeight();
-                var iframeElement = iframe.get(0);
-                windows.on('scroll', function () {
-                    var windowScrollTop = windows.scrollTop();
-                    var iframeBottom = iframeHeight + iframeWrap.offset().top;
-                    //alert(iframeBottom);
+        /*Floating js Start*/
+        var windows = jQuery(window);
+        var iframeWrap = jQuery(this).parent();
+        var iframe = jQuery(this);
+        var iframeHeight = iframe.outerHeight();
+        var iframeElement = iframe.get(0);
+        windows.on('scroll', function () {
+          var windowScrollTop = windows.scrollTop();
+          var iframeBottom = iframeHeight + iframeWrap.offset().top;
+          //alert(iframeBottom);
 
-                    if ((windowScrollTop > iframeBottom)) {
-                        iframeWrap.height(iframeHeight);
-                        iframe.addClass('stuck');
-                        jQuery(".scrolldown").css({ "display": "none" });
-                    } else {
-                        iframeWrap.height('auto');
-                        iframe.removeClass('stuck');
-                    }
-                });
-                /*Floating js End*/
-            });
-        }
+          if ((windowScrollTop > iframeBottom)) {
+            iframeWrap.height(iframeHeight);
+            iframe.addClass('stuck');
+            jQuery(".scrolldown").css({ "display": "none" });
+          } else {
+            iframeWrap.height('auto');
+            iframe.removeClass('stuck');
+          }
+        });
+        /*Floating js End*/
+      });
+    }
 
   </script>
 
